added images and detail section

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+  <md-toolbar class="md-hue-2">
+    <div class="md-toolbar-tools">
+      <h2 flex md-truncate>Welcome to "The Wine Cellar"</h2>
+    </div>
+  </md-toolbar>
+
   <winery ng-cloak></winery>
 </body>
 
